# PTR-Engineering-Cases

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-docs  README.md  environment.yml  pyproject.toml  requirements-ci.txt  requirements.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_or_governance.yml  new_case.yml
.github/workflows/: lint.yml  validate.yml
cases/000_template/: README.md
cases/001_acondicionamiento_agua_lavado_pulpa_kraft/: CHANGELOG.md  README.md  assumptions.md  metadata.yaml  provenance.json  qc_checklist.md  references.bib  validation_report.md
cases/002_recuperacion_vapor_flash_y_particion_de_volatiles/: CHANGELOG.md  README.md  assumptions.md  metadata.yaml  provenance.json  qc_checklist.md  (+2 more)
docs/: 00_overview.md  01_methodology.md  02_governance.md  03_naming_conventions.md  04_units_SI_policy.md  05_qc_rules.md  06_validation_policy.md  07_traceability_model.md  08_licensing.md  glossary.md
references/: bibliography.bib  reading_list.md  standards_index.md
schemas/: case_metadata.schema.json  dataset.schema.json  provenance.schema.json  units.controlled_vocabulary.yaml  variables.controlled_vocabulary.yaml
scripts/: compute_checksums.py  enforce_naming.py  preflight.py  unit_consistency_check.py  validate_metadata.py  validate_tables.py
tests/: conftest.py  test_compute_checksums.py  test_enforce_naming.py  test_unit_consistency.py  test_validate_metadata.py  test_validate_tables.py
(+55 files in other folders)
