[project]
name = "ptr-engineering-cases"
version = "0.1.0"
description = "Reproducible chemical engineering cases — FAIR governance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Roberto Flores", email = "roberto.flores.n1987@gmail.com" }]
keywords = [
    "chemical-engineering",
    "process-simulation",
    "reproducible-research",
    "FAIR",
    "DWSIM",
    "metrology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["scripts", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
